fixed overlapping search result box,comment out the thumbnails

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -141,9 +141,9 @@ body {
 {
     background-color: #bababa;
     margin-top:25px;
-    margin-left: -300px;
-    min-height:400px;
-    width:450px;
+    margin-left: 0px;
+    min-height:100%;
+    width:100%;
     border:solid 10px #ffffff;
 
     -moz-border-radius:9px;
